Adjusts for quality gate