@@ -1,38 +1,27 @@
 package com.barbosa.ms.productmgmt.controller;
 
-import java.net.URI;
-import java.util.List;
-import java.util.UUID;
-import java.util.stream.Collectors;
-
+import com.barbosa.ms.productmgmt.domain.dto.CategoryRequestDTO;
+import com.barbosa.ms.productmgmt.domain.dto.CategoryResponseDTO;
+import com.barbosa.ms.productmgmt.domain.dto.ProductResponseDTO;
+import com.barbosa.ms.productmgmt.domain.records.CategoryRecord;
+import com.barbosa.ms.productmgmt.domain.records.ProductRecord;
+import com.barbosa.ms.productmgmt.services.CategoryService;
+import com.barbosa.ms.productmgmt.services.ProductService;
+import io.swagger.v3.oas.annotations.Operation;
+import io.swagger.v3.oas.annotations.tags.Tag;
+import jakarta.validation.Valid;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.data.domain.Page;
 import org.springframework.data.domain.PageRequest;
 import org.springframework.data.domain.Sort.Direction;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
-import org.springframework.web.bind.annotation.DeleteMapping;
-import org.springframework.web.bind.annotation.GetMapping;
-import org.springframework.web.bind.annotation.PathVariable;
-import org.springframework.web.bind.annotation.PostMapping;
-import org.springframework.web.bind.annotation.PutMapping;
-import org.springframework.web.bind.annotation.RequestBody;
-import org.springframework.web.bind.annotation.RequestMapping;
-import org.springframework.web.bind.annotation.RequestParam;
-import org.springframework.web.bind.annotation.RestController;
+import org.springframework.web.bind.annotation.*;
 import org.springframework.web.servlet.support.ServletUriComponentsBuilder;
 
-import com.barbosa.ms.productmgmt.domain.dto.CategoryResponseDTO;
-import com.barbosa.ms.productmgmt.domain.dto.ProductResponseDTO;
-import com.barbosa.ms.productmgmt.domain.dto.CategoryRequestDTO;
-import com.barbosa.ms.productmgmt.domain.records.CategoryRecord;
-import com.barbosa.ms.productmgmt.domain.records.ProductRecord;
-import com.barbosa.ms.productmgmt.services.CategoryService;
-import com.barbosa.ms.productmgmt.services.ProductService;
-
-import io.swagger.v3.oas.annotations.Operation;
-import io.swagger.v3.oas.annotations.tags.Tag;
-import jakarta.validation.Valid;
+import java.net.URI;
+import java.util.List;
+import java.util.UUID;
 
 @Tag(name = "Category", description = "Endpoints for category operations")
 @RestController
@@ -47,14 +36,14 @@ public class CategoryController {
 
     @Operation(summary = "Create category", description = "Create a new category", tags = { "Category" })
     @PostMapping
-    public ResponseEntity<CategoryResponseDTO> create(@RequestBody @Valid CategoryRequestDTO dto) throws Exception {
+    public ResponseEntity<CategoryResponseDTO> create(@RequestBody @Valid CategoryRequestDTO dto) {
 
-        CategoryRecord record = service.create(new CategoryRecord(null, dto.getName()));
+        CategoryRecord categoryRecord = service.create(new CategoryRecord(null, dto.getName()));
 
         URI location = ServletUriComponentsBuilder
                 .fromCurrentRequest()
                 .path("/{id}")
-                .buildAndExpand(record.id())
+                .buildAndExpand(categoryRecord.id())
                 .toUri();
         return ResponseEntity.created(location).build();
     }
@@ -63,7 +52,10 @@ public class CategoryController {
     @GetMapping("/{id}")
     public ResponseEntity<CategoryResponseDTO> findById(@PathVariable("id") String id) {
         CategoryRecord categoryRecord = service.findById(UUID.fromString(id));
-        return ResponseEntity.ok().body(new CategoryResponseDTO(categoryRecord.id(), categoryRecord.name()));
+        return ResponseEntity.ok().body(CategoryResponseDTO.builder()
+                .id(categoryRecord.id())
+                .name(categoryRecord.name())
+                .build());
     }
 
     @Operation(summary = "Update category by Id", description = "Update category by id", tags = { "Category" })
@@ -80,14 +72,13 @@ public class CategoryController {
         return ResponseEntity.noContent().build();
     }
 
-    @Operation(summary = "List all categories", description = "List all categories in the database", tags = {
-            "Category" })
+    @Operation(summary = "List all categories", description = "List all categories in the database", tags = {"Category"})
     @GetMapping()
     public ResponseEntity<List<CategoryResponseDTO>> listAll() {
         List<CategoryResponseDTO> categories = service.listAll()
                 .stream()
                 .map(CategoryResponseDTO::create)
-                .collect(Collectors.toList());
+                .toList();
 
         return ResponseEntity.ok(categories);
     }
