@@ -1,38 +1,29 @@
 package com.barbosa.ms.productmgmt.controller;
 
-import java.io.UnsupportedEncodingException;
-import java.net.URI;
-import java.net.URLDecoder;
-import java.util.UUID;
-import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.data.domain.Page;
-import org.springframework.data.domain.PageRequest;
-import org.springframework.data.domain.Sort.Direction;
-import org.springframework.http.HttpStatus;
-import org.springframework.http.ResponseEntity;
-import org.springframework.web.bind.annotation.DeleteMapping;
-import org.springframework.web.bind.annotation.GetMapping;
-import org.springframework.web.bind.annotation.PathVariable;
-import org.springframework.web.bind.annotation.PostMapping;
-import org.springframework.web.bind.annotation.PutMapping;
-import org.springframework.web.bind.annotation.RequestBody;
-import org.springframework.web.bind.annotation.RequestMapping;
-import org.springframework.web.bind.annotation.RequestParam;
-import org.springframework.web.bind.annotation.RestController;
-import org.springframework.web.servlet.support.ServletUriComponentsBuilder;
-
-import com.barbosa.ms.productmgmt.domain.dto.ProductResponseDTO;
 import com.barbosa.ms.productmgmt.domain.dto.ProductRequestDTO;
+import com.barbosa.ms.productmgmt.domain.dto.ProductResponseDTO;
 import com.barbosa.ms.productmgmt.domain.records.ProductRecord;
 import com.barbosa.ms.productmgmt.exception.StandardError;
 import com.barbosa.ms.productmgmt.services.ProductService;
-
 import io.swagger.v3.oas.annotations.Operation;
 import io.swagger.v3.oas.annotations.media.Content;
 import io.swagger.v3.oas.annotations.media.Schema;
 import io.swagger.v3.oas.annotations.responses.ApiResponse;
 import io.swagger.v3.oas.annotations.responses.ApiResponses;
 import io.swagger.v3.oas.annotations.tags.Tag;
+import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.data.domain.Page;
+import org.springframework.data.domain.PageRequest;
+import org.springframework.data.domain.Sort.Direction;
+import org.springframework.http.HttpStatus;
+import org.springframework.http.ResponseEntity;
+import org.springframework.web.bind.annotation.*;
+import org.springframework.web.servlet.support.ServletUriComponentsBuilder;
+
+import java.net.URI;
+import java.net.URLDecoder;
+import java.nio.charset.StandardCharsets;
+import java.util.UUID;
 
 @Tag(name = "Product", description = "Endpoints for product operations")
 @RestController
@@ -54,7 +45,7 @@ public class ProductController {
                     @Content(schema = @Schema(implementation = StandardError.class)) } )
     })
     @PostMapping(value = "product")
-    public ResponseEntity<ProductResponseDTO> create(@RequestBody ProductRequestDTO dto) throws Exception {
+    public ResponseEntity<ProductResponseDTO> create(@RequestBody ProductRequestDTO dto) {
 
         ProductRecord productRecord = service.create(new ProductRecord(null, dto.getName(), dto.getUUIDCategory()));
 
@@ -101,20 +92,15 @@ public class ProductController {
             @RequestParam(value = "orderBy", defaultValue = "name") String orderBy,
             @RequestParam(value = "direction", defaultValue = "ASC") String direction) {
 
-        String nameDecoded = ProductController.decodeParam(name);
         PageRequest pageRequest = PageRequest.of(page, linesPerPage, Direction.valueOf(direction), orderBy);
-        Page<ProductRecord> records = service.search(nameDecoded, pageRequest);
+        Page<ProductRecord> records = service.search(decodeParam(name), pageRequest);
         Page<ProductResponseDTO> products = records.map(ProductResponseDTO::create);
 
         return ResponseEntity.status(HttpStatus.PARTIAL_CONTENT).body(products);
     }
 
     private static String decodeParam(String s) {
-        try {
-            return URLDecoder.decode(s, "UTF-8");
-        } catch (UnsupportedEncodingException e) {
-            return "";
-        }
+        return URLDecoder.decode(s, StandardCharsets.UTF_8);
     }
 
 }
